k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-backend-service
spec:
  type: NodePort
  selector:
    app: voting-backend
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007
