k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-frontend-service
spec:
  type: NodePort
  selector:
    app: voting-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
